# tradezero-pricer

./: .containerignore  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Containerignore  HACKING.rst  LICENSE  Makefile  README.md  boot.sh  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini  tradezero_pricer.py
.circleci/: config.yml
kustomize/base/: 01-namespace.yaml  02-tradezero-pricer-db-deployment.yaml  03-tradezero-pricer-db-svc.yaml  04-tradezero-pricer-deployment.yaml  05-tradezero-pricer-svc.yaml  06-tradezero-pricer-route.yaml  kustomization.yaml
scripts/: build.sh
tradezero_pricer/: __init__.py  tradezero_pricer.py
tradezero_pricer/api/v1/: __init__.py  candlechart.yml  catalog.yml  intraday.yml  price.yml  views.py
tradezero_pricer/config/: config.py
tradezero_pricer/domain/models/: stock.py
tradezero_pricer/main/: __init__.py  health.yml  version.yml  views.py
tradezero_pricer/static/: main.css
tradezero_pricer/templates/: 403.html  404.html  404.html.j2  500.html  about.html  apidocs.html  base.html
tradezero_pricer/tests/: test_api.py  test_main.py
